# cookie-jar

./: LICENSE  README.md
ai/: cookiecutter.json
ai/{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Dockerfile
api_regression/: cookiecutter.json
api_regression/{{cookiecutter.repo_name}}/: README.md
ds/: cookiecutter.json
ds/{{cookiecutter.repo_name}}/: .gitignore  Makefile  README.md  make.bat  mkdocs.yml  requirements.txt
fastapi/: cookiecutter.json
fastapi/{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTES.md  README.md  setup.cfg
fastapi/{{cookiecutter.repo_name}}/docs/: index.rst
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  __main__.py  database.py  main.py  models.py  schemas.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/app/: app.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/cmd/: main.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/cmd/db/: __init__.py  db.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/command/: main.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/command/db/: __init__.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/controllers/: __init__.py  user.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/models/: user.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/services/: __init__.py  app.py  database.py
fastapi/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/views/: user.py
fastapi/{{cookiecutter.repo_name}}/test/: test_main.py  test_models_user.py
go/: cookiecutter.json
go/{{cookiecutter.project_name}}/: Makefile  NOTES.md
mlapi/: cookiecutter.json
mlapi/{{cookiecutter.repo_name}}/: .gitignore  Makefile  mkdocs.yml  pyproject.toml  setup.cfg
py/: cookiecutter.json
py/{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  setup.cfg
py/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/cmd/: main.py
py/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/command/: main.py
pymq/: cookiecutter.json
pymq/{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Makefile  README.md  setup.cfg
(+69 files in other folders)
