[metadata]
name = {{cookiecutter.repo_name}}
version = attr: {{cookiecutter.repo_name}}.__version__
license = {{cookiecutter.license}}
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License
url = https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}
author = {{cookiecutter.author_name}}
author_email = "First Last <first.last@gmail.com>"
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
  fastapi
  alembic
  asyncpg
package_dir =
  =src
packages = find:
requires-python = ">=3.11"

[options.extras_require]
dev =
  pudb
  black
  flake8
  pytest
  pytest-cov
  pytest-asyncio
  aiosqlite
  wily
  twine
  pre-commit
  build
  uvicorn
  httpx
  python-dotenv
  pre-commit
  sphinx

[options.packages.find]
where = src

[tox:tox]
isolated_build = True
envlist =
  3.9.16
  3.10.10
  3.11.2
  3.12-dev
deps = pytest
commands = pytest

[tool:pytest]
testpaths = test

[testenv]
deps =
  pytest
  pytest-cov
commands = pytest test/

[options.entry_points]
console_scripts = 
  {{cookiecutter.repo_name}} = {{cookiecutter.repo_name}}.command.main:main
